media/sonarr/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
spec:
  serviceName: sonarr
  selector:
    matchLabels:
      app: sonarr
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.6
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: data
              mountPath: /config
            - name: downloads
              mountPath: /mnt/tank/Downloads
            - name: series
              mountPath: /mnt/tank/Series
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sonarr-data
        - name: downloads
          persistentVolumeClaim:
            claimName: sonarr-downloads
        - name: series
          persistentVolumeClaim:
            claimName: sonarr-series
