media/sonarr/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 8989
  selector:
    app: sonarr
